# drinkwater

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.spec  setup_mac.spec  setup_windows.spec  version.json
resources/config/: llm_config.example.json
resources/data/: default_config.json
resources/themes/demon_slayer/: theme.json
resources/themes/hello_kitty/: style.qss  theme.json
src/: __init__.py
src/core/: pregnancy.py  reminder_engine.py  scheduler.py
src/core/llm/: __init__.py  base.py  deepseek.py  glm4.py  key_monitor.py  manager.py  openai_client.py  qwen.py
src/data/: cache.py  models.py  storage.py
src/ui/: __init__.py  icon_manager.py  main_window.py  theme_manager.py  tray_icon.py
src/ui/dialogs/: __init__.py  add_event.py  diet_record.py  settings.py  water_reminder_settings.py
src/ui/widgets/: __init__.py  countdown.py  event_card.py  pregnancy_tips.py  water_tracker.py
src/utils/: autostart.py  constants.py  helpers.py  updater.py
